--- a/Thursday/index.html
+++ b/Thursday/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <title>Document</title>
 </head>
@@ -13,11 +14,29 @@
             <th scope="col">id</th>
             <th scope="col">name</th>
             <th scope="col">quantity</th>
+            <th scope="col"></th>
           </tr>
         </thead>
         <tbody id="salest">
         </tbody>
       </table>
+
+      <br><br>
+      <h4>Enter product here:</h4>
+      <br>
+      <form id="addprod">
+        <div class="form-group">
+          <label for="prodnameinput">Product name</label>
+          <input type="text" class="form-control" id="prodnameinput">
+        </div>
+        <div class="form-group">
+          <label for="quantinput">quantity</label>
+          <input type="number" class="form-control" id="quantinput">
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+
+
       <script src="sales.js"></script>
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
